# Skydot

./: README.md  build_and_push.sh  build_and_run.sh  commands.txt  skydot-v2.sh  skydot.sh  test.sh
AuthService/: .project  Dockerfile  pom.xml
C++Service/: Dockerfile  HelloWorld.cpp
C++Service/Archive/C++Service/cb/: CMakeLists.txt  HelloWorld  Makefile  cmake_install.cmake
C++Service/cb/: HelloWorld.cpp
GoService/: Dockerfile  app.go  get.sh
JavaScriptService/: Dockerfile  package.json  server.js
PayeeWSDL/Payee/: pom.xml  (+1 more)
YAML/: account-details-service-python.yaml  account-summary-service-python.yaml  auth-app.yaml  balance.yaml  bill-payee-service-java.yaml  bill-payee-service-javascript.yaml  bill-payee-service-python.yaml  bill-payment-service-cplus.yaml  bill-payment-service-java.yaml  bill-payment-service-javascript.yaml  bill-payment-service-python.yaml  create-service-cplus.yaml  create-service-python.yaml  delete-service-cplus.yaml  delete-service-python.yaml  host-gateway.yaml  jumpod.yaml  mobile-app.yaml  transfer-service-cplus.yaml  transfer-service-java.yaml  transfer-service-javascript.yaml  transfer-service-python.yaml  verify-service-cplus.yaml  verify-service-python.yaml  web-app.yaml
documentation/: README.txt  SKYDOT_ABSTRACT.docx  final-report.docx  metrics.xlsx  metrics_ graphs.xlsx  pre-proposal.docx  presentation.pptx  proposal.docx  ~$metrics.xlsx  ~$presentation.pptx
metrics/: Verify.postman_test_run.json  metric.postman_collection.json  metric2.postman_collection.json  port-forwarding.txt  skydot-mobile.postman_collection.json
(+456 files in other folders)
