cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)

set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
set(CMAKE_EXE_LINK_DYNAMIC_C_FLAGS)
set(CMAKE_EXE_LINK_DYNAMIC_CXX_FLAGS)
set(CMAKE_SHARED_LIBRARY_C_FLAGS)
set(CMAKE_SHARED_LIBRARY_CXX_FLAGS) 
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
set(Boost_USE_STATIC_LIBS ON)
set(BUILD_SHARED_LIBS OFF)
set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} "-static")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
project(HelloWorld CXX)

find_library(cpprest NAMES /casablanca/Release/build/Binaries/libcpprest.a cpprest)
find_library(common_utilities NAMES /casablanca/Release/build/Binaries/libcommon_utilities.a common_utilities)
add_executable(HelloWorld HelloWorld.cpp)
target_link_libraries(HelloWorld PRIVATE boost_system crypto ssl pthread cpprest /casablanca/Release/build/Binaries/libcommon_utilities.a)
